# GiggliAgents

./: README.md
backend/: .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  requirements.txt  setup.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/scripts/: build_app.sh  (+10 more)
desktop-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
desktop-app/src-tauri/: .gitignore  .taurignore  Cargo.toml  README.md  build.rs  tauri.conf.json
desktop-app/src-tauri/embedded/: config_rag.g  requirements.txt
desktop-app/src-tauri/embedded/agent_runtime/: __init__.py  executor.py
desktop-app/src-tauri/embedded/prefabs/: __init__.py  base_module.py
desktop-app/src-tauri/embedded/prefabs/document_processor/: __init__.py  document_processor.g  document_processor.meta.yaml  document_processor.py
desktop-app/src-tauri/embedded/prefabs/embedding_generator/: __init__.py  embedding_generator.g  embedding_generator.meta.yaml  embedding_generator.py
desktop-app/src-tauri/embedded/prefabs/rag_chain/: __init__.py  rag_chain.g  rag_chain.meta.yaml  rag_chain.py
desktop-app/src-tauri/embedded/prefabs/settings/: __init__.py  settings_manager.py
desktop-app/src-tauri/embedded/prefabs/vector_store/: __init__.py  vector_store.g  vector_store.meta.yaml  vector_store.py
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
frontend/: .dockerignore  .env  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
(+35 files in other folders)
